--- a/src/assets/komachi/config1.json
+++ b/src/assets/komachi/config1.json
@@ -1,4 +1,6 @@
 {
+    "spells": [207],
+    "shownCost": 4,
     "5a": {
         "ground": {
             "cd": 300,
@@ -44,6 +46,84 @@
             "action": 411,
             "speedY": 0,
             "posY": 0
+        }
+    },
+
+
+    "8a": {
+        "ground": {
+            "cd": 450,
+            "nb": 1,
+            "action": 570,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 450,
+            "nb": 1,
+            "action": 570,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 550,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 550,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 510,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 510,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 4,
+            "cardName": 207,
+            "cd": 1200,
+            "nb": 1,
+            "action": 607
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 4,
+            "cardName": 207,
+            "cd": 1200,
+            "nb": 1,
+            "action": 607
         }
     }
 }
