--- a/src/assets/patchouli/config0.json
+++ b/src/assets/patchouli/config0.json
@@ -1,88 +1,81 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [206],
+    "shownCost": 3,
     "5a": {
         "ground": {
-            "cd": 300,
+            "cd": 360,
             "nb": 1,
-            "action": 304,
-            "offsetX": -15
+            "action": 412
         },
         "air": {
-            "cd": 300,
+            "cd": 360,
             "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
+            "posY": 0,
+            "action": 412
         }
     },
     "5b": {
         "ground": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402
+            "action": 407,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0]
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402,
-            "posY": 0
+            "action": 407,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0]
         }
     },
     "5c": {
         "ground": {
-            "cd": 420,
+            "cd": 600,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
+            "action": 411,
+            "offsetX": -50
         },
         "air": {
-            "cd": 420,
+            "cd": 600,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
+            "action": 411,
+            "offsetX": -50
         }
     },
 
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 565,
-            "offsetX": 50,
+            "action": 580,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 565,
+            "action": 580,
             "posY": 0,
-            "offsetX": 50,
+            "offsetX": 0,
             "cond": "end"
         }
     },
     "8b": {
         "ground": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 530,
+            "action": 570,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 530,
+            "action": 570,
+            "speedY": 0,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -90,18 +83,18 @@
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 550,
-            "offsetX": -150,
+            "action": 571,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 750,
             "nb": 1,
-            "action": 550,
+            "action": 571,
             "posY": 0,
-            "offsetX": -150,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -111,11 +104,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 206,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 606
         },
         "air": {
             "speedX": 0,
@@ -123,11 +116,11 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 206,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 606
         }
     }
 }
