--- a/src/assets/remilia/config2.json
+++ b/src/assets/remilia/config2.json
@@ -60,6 +60,7 @@
             "nb": 1,
             "action": 551,
             "speedY": 0,
+            "posY": 0,
             "gravityY": 0
         }
     },
