--- a/src/assets/aya/config0.json
+++ b/src/assets/aya/config0.json
@@ -1,6 +1,6 @@
 {
-    "spells": [201],
-    "shownCost": 5,
+    "spells": [203],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "start": 200,
@@ -69,16 +69,22 @@
         "ground": {
             "cd": 450,
             "nb": 1,
-            "action": 510,
-            "offsetX": -150,
+            "action": 540,
+            "canControl": true,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 100,
+            "posY": 200,
             "cond": "end"
         },
         "air": {
             "cd": 450,
             "nb": 1,
-            "action": 510,
-            "posY": 0,
-            "offsetX": -150,
+            "action": 540,
+            "canControl": true,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 0,
             "cond": "end"
         }
     },
@@ -86,16 +92,15 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
+            "action": 520,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 552,
-            "gravityY": 0,
-            "speedY": 0,
+            "action": 520,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
@@ -104,24 +109,16 @@
         "ground": {
             "cd": 300,
             "nb": 1,
-            "start": 570,
-            "startMin": 40,
-            "startMax": 300,
-            "startKeys": [0, 0, 0, 0, 1, 0, 0, 0],
-            "action": 571,
-            "offsetX": -200,
+            "action": 560,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "start": 570,
-            "startMin": 40,
-            "startMax": 300,
-            "startKeys": [0, 0, 0, 0, 1, 0, 0, 0],
-            "action": 571,
+            "action": 560,
             "posY": 0,
-            "offsetX": -200,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -131,11 +128,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 3,
+            "cardName": 203,
             "cd": 1200,
             "nb": 1,
-            "action": 601
+            "action": 603
         },
         "air": {
             "speedX": 0,
@@ -143,11 +140,11 @@
             "posY": 0,
             "gravityY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 3,
+            "cardName": 203,
             "cd": 1200,
             "nb": 1,
-            "action": 601
+            "action": 603
         }
     }
 }
