--- a/src/assets/iku/config0.json
+++ b/src/assets/iku/config0.json
@@ -1,107 +1,103 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [209],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "cd": 300,
             "nb": 1,
-            "action": 304,
-            "offsetX": -15
+            "action": 303,
+            "offsetX": 20
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
+            "action": 303,
+            "offsetX": 20,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402
+            "action": 408,
+            "offsetX": -50
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402,
+            "action": 408,
+            "offsetX": -50,
             "posY": 0
         }
     },
     "5c": {
         "ground": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
+            "action": 418,
+            "speedX": 13,
+            "offsetX": -150
         },
         "air": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
+            "action": 308
         }
     },
 
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 150,
             "nb": 1,
-            "action": 565,
-            "offsetX": 50,
-            "cond": "end"
+            "action": 510,
+            "offsetX": 100,
+            "cond": "end",
+            "recovery": 300
         },
         "air": {
-            "cd": 450,
+            "cd": 150,
             "nb": 1,
-            "action": 565,
+            "action": 510,
             "posY": 0,
-            "offsetX": 50,
-            "cond": "end"
+            "offsetX": 100,
+            "cond": "end",
+            "recovery": 300
         }
     },
     "8b": {
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 525,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
-            "posY": 0,
+            "action": 527,
+            "speedY": 0,
+            "gravityY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 900,
             "nb": 1,
-            "action": 550,
-            "offsetX": -150,
+            "action": 500,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 900,
             "nb": 1,
-            "action": 550,
+            "action": 500,
             "posY": 0,
-            "offsetX": -150,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -111,11 +107,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 209,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 609
         },
         "air": {
             "speedX": 0,
@@ -123,11 +119,11 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 209,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 609
         }
     }
 }
