--- a/src/assets/iku/config1.json
+++ b/src/assets/iku/config1.json
@@ -1,4 +1,6 @@
 {
+    "spells": [200],
+    "shownCost": 1,
     "5a": {
         "ground": {
             "cd": 300,
@@ -41,6 +43,83 @@
             "cd": 360,
             "nb": 1,
             "action": 308
+        }
+    },
+
+
+    "8a": {
+        "ground": {
+            "cd": 900,
+            "nb": 1,
+            "action": 560,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 900,
+            "nb": 1,
+            "action": 560,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 900,
+            "nb": 1,
+            "action": 545,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 900,
+            "nb": 1,
+            "action": 545,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 900,
+            "nb": 1,
+            "action": 546,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 900,
+            "nb": 1,
+            "action": 546,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 1,
+            "cardName": 200,
+            "cd": 1200,
+            "nb": 1,
+            "action": 600
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "cost": 1,
+            "cardName": 200,
+            "cd": 1200,
+            "nb": 1,
+            "action": 650
         }
     }
 }
