--- a/src/assets/iku/config2.json
+++ b/src/assets/iku/config2.json
@@ -1,73 +1,67 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [206],
+    "shownCost": 2,
     "5a": {
         "ground": {
             "cd": 300,
             "nb": 1,
-            "action": 304,
-            "offsetX": -15
+            "action": 303,
+            "offsetX": 20
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
+            "action": 303,
+            "offsetX": 20,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402
+            "action": 408,
+            "offsetX": -50
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402,
+            "action": 408,
+            "offsetX": -50,
             "posY": 0
         }
     },
     "5c": {
         "ground": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
+            "action": 418,
+            "speedX": 13,
+            "offsetX": -150
         },
         "air": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
+            "action": 308
         }
     },
 
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
             "action": 565,
-            "offsetX": 50,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 565,
-            "posY": 0,
-            "offsetX": 50,
+            "action": 567,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -75,14 +69,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 550,
+            "allowedKeys": [0, 1, 0, 0, 0, 0, 0, 0],
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 550,
+            "allowedKeys": [0, 1, 0, 0, 0, 0, 0, 0],
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -92,16 +88,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
-            "offsetX": -150,
+            "action": 520,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
+            "action": 520,
             "posY": 0,
-            "offsetX": -150,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -111,11 +107,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 2,
+            "cardName": 206,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 606
         },
         "air": {
             "speedX": 0,
@@ -123,11 +119,11 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 2,
+            "cardName": 206,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 606
         }
     }
 }
