--- a/src/assets/marisa/config0.json
+++ b/src/assets/marisa/config0.json
@@ -1,55 +1,47 @@
 {
-    "spells": [204],
-    "shownCost": 5,
+    "spells": [212],
+    "shownCost": 3,
     "5a": {
         "ground": {
-            "cd": 300,
+            "cd": 240,
             "nb": 1,
-            "action": 304,
+            "action": 301,
             "offsetX": -15
         },
         "air": {
-            "cd": 300,
+            "cd": 240,
             "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
+            "action": 301,
+            "offsetX": -15,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402
+            "action": 408
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402,
+            "action": 408,
             "posY": 0
         }
     },
     "5c": {
         "ground": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
+            "action": 412,
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0]
         },
         "air": {
-            "cd": 420,
+            "cd": 360,
             "nb": 1,
-            "action": 414,
+            "action": 416,
             "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
+            "gravityY": 0
         }
     },
 
@@ -58,16 +50,17 @@
         "ground": {
             "cd": 450,
             "nb": 1,
-            "action": 565,
-            "offsetX": 50,
+            "action": 545,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 450,
             "nb": 1,
-            "action": 565,
-            "posY": 0,
-            "offsetX": 50,
+            "action": 547,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -75,14 +68,14 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 521,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 521,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -92,16 +85,17 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
-            "offsetX": -150,
+            "action": 560,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
-            "posY": 0,
-            "offsetX": -150,
+            "action": 562,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -111,11 +105,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 212,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 612
         },
         "air": {
             "speedX": 0,
@@ -123,11 +117,11 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 5,
-            "cardName": 204,
+            "cost": 3,
+            "cardName": 212,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 612
         }
     }
 }
