--- a/src/assets/marisa/config1.json
+++ b/src/assets/marisa/config1.json
@@ -1,4 +1,6 @@
 {
+    "spells": [219],
+    "shownCost": 5,
     "5a": {
         "ground": {
             "cd": 240,
@@ -40,6 +42,85 @@
             "action": 416,
             "speedY": 0,
             "gravityY": 0
+        }
+    },
+
+
+    "8a": {
+        "ground": {
+            "cd": 450,
+            "nb": 1,
+            "action": 530,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 450,
+            "nb": 1,
+            "action": 530,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 500,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 500,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 570,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 572,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 5,
+            "cardName": 219,
+            "cd": 1200,
+            "nb": 1,
+            "action": 619
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 5,
+            "cardName": 219,
+            "cd": 1200,
+            "nb": 1,
+            "action": 619
         }
     }
 }
