--- a/src/assets/patchouli/config1.json
+++ b/src/assets/patchouli/config1.json
@@ -1,4 +1,19 @@
 {
+    "spells": [212],
+    "shownCost": 4,
+    "5a": {
+        "ground": {
+            "cd": 360,
+            "nb": 1,
+            "action": 412
+        },
+        "air": {
+            "cd": 360,
+            "nb": 1,
+            "posY": 0,
+            "action": 412
+        }
+    },
     "5b": {
         "ground": {
             "cd": 300,
@@ -11,18 +26,6 @@
             "nb": 1,
             "action": 407,
             "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0]
-        }
-    },
-    "5a": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412
         }
     },
     "5c": {
@@ -39,6 +42,86 @@
             "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "action": 411,
             "offsetX": -50
+        }
+    },
+
+
+    "8a": {
+        "ground": {
+            "cd": 450,
+            "nb": 1,
+            "action": 585,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 450,
+            "nb": 1,
+            "action": 585,
+            "posY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 545,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 547,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 531,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 533,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 4,
+            "cardName": 212,
+            "cd": 1200,
+            "nb": 1,
+            "action": 612
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 4,
+            "cardName": 212,
+            "cd": 1200,
+            "nb": 1,
+            "action": 612
         }
     }
 }
