--- a/src/assets/reimu/config1.json
+++ b/src/assets/reimu/config1.json
@@ -1,4 +1,6 @@
 {
+    "spells": [207],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "cd": 240,
@@ -38,6 +40,85 @@
             "cd": 360,
             "nb": 1,
             "action": 414
+        }
+    },
+
+
+    "8a": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 510,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 512,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 561,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 561,
+            "posY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 900,
+            "nb": 1,
+            "action": 530,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 900,
+            "nb": 1,
+            "action": 530,
+            "posY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 3,
+            "cardName": 207,
+            "cd": 1200,
+            "nb": 1,
+            "action": 607
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 3,
+            "cardName": 207,
+            "cd": 1200,
+            "nb": 1,
+            "action": 607
         }
     }
 }
