--- a/src/assets/sanae/config1.json
+++ b/src/assets/sanae/config1.json
@@ -1,4 +1,6 @@
 {
+    "spells": [206],
+    "shownCost": 3,
     "canFly": true,
     "5a": {
         "ground": {
@@ -48,6 +50,86 @@
             "speedY": 0,
             "gravityY": 0,
             "cond": "end"
+        }
+    },
+
+
+
+
+    "8a": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 510,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 510,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+    "8b": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 560,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 560,
+            "posY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 600,
+            "nb": 1,
+            "action": 530,
+            "offsetX": -50,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 600,
+            "nb": 1,
+            "action": 530,
+            "posY": 0,
+            "offsetX": -50,
+            "cond": "end"
+        }
+    },
+
+    "5s": {
+        "ground": {
+            "speedX": 0,
+            "speedY": 0,
+            "offsetX": -50,
+            "cost": 3,
+            "cardName": 206,
+            "cd": 1200,
+            "nb": 1,
+            "action": 606
+        },
+        "air": {
+            "speedX": 0,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 3,
+            "cardName": 206,
+            "cd": 1200,
+            "nb": 1,
+            "action": 606
         }
     }
 }
