--- a/src/assets/sanae/config2.json
+++ b/src/assets/sanae/config2.json
@@ -1,34 +1,34 @@
 {
-    "spells": [204],
+    "spells": [210],
     "shownCost": 5,
+    "canFly": true,
     "5a": {
         "ground": {
             "cd": 300,
             "nb": 1,
-            "action": 304,
-            "offsetX": -15
+            "action": 302
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
+            "action": 302,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402
+            "action": 418,
+            "speedX": 10,
+            "hitCount": 2
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 402,
+            "action": 418,
+            "speedX": 10,
+            "hitCount": 2,
             "posY": 0
         }
     },
@@ -36,38 +36,41 @@
         "ground": {
             "cd": 420,
             "nb": 1,
-            "action": 414,
+            "action": 416,
             "speedY": 0,
             "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
+            "cond": "end",
+            "posX": 620,
+            "posY": 400
         },
         "air": {
-            "cd": 420,
+            "cd": 480,
             "nb": 1,
-            "action": 414,
+            "action": 416,
             "speedY": 0,
             "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
+            "cond": "end"
         }
     },
 
 
+
+
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 565,
-            "offsetX": 50,
+            "action": 550,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 600,
             "nb": 1,
-            "action": 565,
-            "posY": 0,
-            "offsetX": 50,
+            "action": 552,
+            "speedY": 0,
+            "gravityY": 0,
+            "offsetX": 0,
             "cond": "end"
         }
     },
@@ -75,16 +78,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
-            "offsetX": -50,
+            "action": 525,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 530,
+            "action": 525,
             "posY": 0,
-            "offsetX": -50,
+            "offsetX": 0,
             "cond": "end"
         }
     },
@@ -92,16 +95,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
-            "offsetX": -150,
+            "action": 500,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 550,
+            "action": 500,
             "posY": 0,
-            "offsetX": -150,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -112,10 +115,10 @@
             "speedY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 204,
+            "cardName": 210,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 610
         },
         "air": {
             "speedX": 0,
@@ -124,10 +127,10 @@
             "offsetX": -50,
             "posY": 0,
             "cost": 5,
-            "cardName": 204,
+            "cardName": 210,
             "cd": 1200,
             "nb": 1,
-            "action": 604
+            "action": 610
         }
     }
 }
