--- a/src/assets/udonge/config2.json
+++ b/src/assets/udonge/config2.json
@@ -1,6 +1,6 @@
 {
-    "spells": [208],
-    "shownCost": 2,
+    "spells": [209],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "cd": 300,
@@ -52,13 +52,13 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 520,
+            "action": 510,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 521,
+            "action": 510,
             "offsetX": -50,
             "posY": 0
         }
@@ -67,30 +67,32 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 530,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 532,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
     "8c": {
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
-            "offsetX": -50
+            "action": 565,
+            "offsetX": 0
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
-            "offsetX": -50,
-            "posY": 0
+            "action": 567,
+            "offsetX": 0,
+            "speedY": 0,
+            "gravityY": 0
         }
     },
 
@@ -98,24 +100,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "offsetX": 0,
+            "cost": 3,
+            "cardName": 209,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 609
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
             "posY": 0,
             "gravityY": 0,
-            "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "offsetX": 0,
+            "cost": 3,
+            "cardName": 209,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 609
         }
     }
 }
