--- a/src/assets/utsuho/config0.json
+++ b/src/assets/utsuho/config0.json
@@ -1,35 +1,33 @@
 {
-    "spells": [208],
-    "shownCost": 2,
+    "spells": [205],
+    "shownCost": 3,
     "5a": {
         "ground": {
-            "cd": 300,
+            "cd": 360,
             "nb": 1,
-            "action": 302,
-            "hitCount": 3,
-            "offsetX": -15,
-            "speedX": 15
+            "action": 301,
+            "offsetX": -15
         },
         "air": {
             "cd": 360,
             "nb": 1,
-            "action": 309,
-            "speedY": 0
+            "action": 301,
+            "offsetX": -15,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 300,
+            "cd": 420,
             "nb": 1,
-            "speedX": 10,
-            "action": 305
+            "action": 401
         },
         "air": {
-            "cd": 300,
+            "cd": 420,
             "nb": 1,
-            "posY": 0,
-            "speedX": 10,
-            "action": 305
+            "action": 405,
+            "speedY": 0,
+            "gravityY": 0
         }
     },
     "5c": {
@@ -52,13 +50,13 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 520,
+            "action": 525,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 521,
+            "action": 525,
             "offsetX": -50,
             "posY": 0
         }
@@ -67,15 +65,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 540,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 542,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
     "8c": {
@@ -88,9 +87,10 @@
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
+            "action": 507,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
 
@@ -99,23 +99,22 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "cost": 3,
+            "cardName": 205,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 605
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "cost": 3,
+            "cardName": 205,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 655
         }
     }
 }
