--- a/src/assets/yukari/config2.json
+++ b/src/assets/yukari/config2.json
@@ -1,48 +1,52 @@
 {
     "spells": [208],
-    "shownCost": 2,
+    "shownCost": 4,
     "5a": {
         "ground": {
+            "cd": 360,
+            "nb": 1,
+            "action": 305,
+            "offsetX": -15,
+            "speedX": 10
+        },
+        "air": {
             "cd": 300,
             "nb": 1,
-            "action": 302,
-            "hitCount": 3,
-            "offsetX": -15,
+            "action": 309,
+            "offsetX": 20
+        }
+    },
+    "5b": {
+        "ground": {
+            "cd": 360,
+            "nb": 1,
+            "action": 418,
             "speedX": 15
         },
         "air": {
             "cd": 360,
             "nb": 1,
-            "action": 309,
-            "speedY": 0
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "speedX": 10,
-            "action": 305
-        },
-        "air": {
-            "cd": 300,
-            "nb": 1,
             "posY": 0,
-            "speedX": 10,
-            "action": 305
+            "action": 418,
+            "speedX": 15
         }
     },
     "5c": {
         "ground": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
-            "action": 412
+            "action": 416,
+            "posY": 200,
+            "offsetX": -50,
+            "speedY": 0
         },
         "air": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
-            "action": 412,
-            "posY": 0
+            "action": 416,
+            "speedY": 0,
+            "offsetY": 100,
+            "offsetX": -50
         }
     },
 
@@ -52,15 +56,16 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 520,
+            "action": 550,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 521,
+            "action": 552,
             "offsetX": -50,
-            "posY": 0
+            "gravityY": 0,
+            "speedY": 0
         }
     },
     "8b": {
@@ -82,14 +87,14 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
-            "offsetX": -50
+            "action": 520,
+            "offsetX": 0
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
-            "offsetX": -50,
+            "action": 520,
+            "offsetX": 0,
             "posY": 0
         }
     },
@@ -99,7 +104,7 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 2,
+            "cost": 4,
             "cardName": 208,
             "cd": 1200,
             "nb": 1,
@@ -108,14 +113,13 @@
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
-            "cost": 2,
+            "cost": 4,
             "cardName": 208,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 658
         }
     }
 }
