--- a/src/assets/yuyuko/config2.json
+++ b/src/assets/yuyuko/config2.json
@@ -1,45 +1,43 @@
 {
-    "spells": [208],
-    "shownCost": 2,
+    "spells": [219],
+    "shownCost": 3,
     "5a": {
         "ground": {
             "cd": 300,
             "nb": 1,
             "action": 302,
-            "hitCount": 3,
-            "offsetX": -15,
-            "speedX": 15
+            "offsetX": -15
         },
         "air": {
-            "cd": 360,
+            "cd": 300,
             "nb": 1,
-            "action": 309,
-            "speedY": 0
+            "action": 302,
+            "offsetX": -15,
+            "posY": 0
         }
     },
     "5b": {
         "ground": {
-            "cd": 300,
+            "cd": 330,
             "nb": 1,
-            "speedX": 10,
-            "action": 305
+            "action": 402
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "posY": 0,
-            "speedX": 10,
-            "action": 305
+            "speedY": 0,
+            "gravityY": 0,
+            "action": 307
         }
     },
     "5c": {
         "ground": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
             "action": 412
         },
         "air": {
-            "cd": 360,
+            "cd": 420,
             "nb": 1,
             "action": 412,
             "posY": 0
@@ -52,13 +50,13 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 520,
+            "action": 550,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 521,
+            "action": 550,
             "offsetX": -50,
             "posY": 0
         }
@@ -67,30 +65,32 @@
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 510,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 560,
+            "action": 512,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
     "8c": {
         "ground": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
+            "action": 520,
             "offsetX": -50
         },
         "air": {
             "cd": 600,
             "nb": 1,
-            "action": 505,
+            "action": 522,
             "offsetX": -50,
-            "posY": 0
+            "gravityY": 0,
+            "speedY": 0
         }
     },
 
@@ -99,11 +99,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "cost": 3,
+            "cardName": 219,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 619
         },
         "air": {
             "speedX": 0,
@@ -111,11 +111,11 @@
             "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
-            "cost": 2,
-            "cardName": 208,
+            "cost": 3,
+            "cardName": 219,
             "cd": 1200,
             "nb": 1,
-            "action": 608
+            "action": 619
         }
     }
 }
